--- a/desafios/d.012/estilo/style.css
+++ b/desafios/d.012/estilo/style.css
@@ -1,1 +1,74 @@
 @charset "utf-8";
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root {
+  --font1: Verdana, Genebra Tahoma, sans-serif;
+  --font2: 'Passion one', cursive;
+  --font3: 'Siriracha', cursive;
+}
+
+* {
+  margin: 0px;
+  padding: 0px;
+}
+
+html,
+body {
+  min-height: 100vh;
+  background-color: darkgrey;
+  font-family: var(--font1);
+}
+a:hover {
+  text-decoration: underline;
+}
+
+header {
+  background-color: black;
+  color: white;
+  text-align: center;
+}
+header > h1 {
+  padding-top: 50px;
+  font-variant: small-caps;
+  font-family: var(--font2);
+  font-size: 10vw;
+}
+header > p {
+  padding-bottom: 50px;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+  font-weight: bolder;
+}
+
+section {
+  padding-top: 10vh;
+  padding-bottom: 10vh;
+  line-height: 2em;
+  padding-left: 30px;
+  font-family: var(--font3);
+  font-size: 3.4vw;
+}
+section.normal {
+  background-color: white;
+  color: black;
+}
+section.imagem {
+  background-color: rgb(42, 41, 41);
+  color: white;
+}
+section.imagem > p {
+  background-color: rgba(0, 0, 0, 0.268);
+  display: inline-block;
+  padding: 10px;
+}
+
+footer {
+  background-color: black;
+  color: white;
+  text-align: center;
+  padding: 10px;
+}
