--- a/desafios/d.012/estilo/style.css
+++ b/desafios/d.012/estilo/style.css
@@ -52,6 +52,9 @@ section {
   font-family: var(--font3);
   font-size: 3.4vw;
 }
+section > p {
+  padding-bottom: 2em;
+}
 section.normal {
   background-color: white;
   color: black;
@@ -59,11 +62,25 @@ section.normal {
 section.imagem {
   background-color: rgb(42, 41, 41);
   color: white;
+  box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.613);
+  background-position: right center;
+  background-size: cover;
+  background-attachment: fixed;
 }
 section.imagem > p {
   background-color: rgba(0, 0, 0, 0.268);
   display: inline-block;
   padding: 10px;
+  text-shadow: 1px 1px 0px black;
+}
+/*EFEITO PARALAX SIMPLE*/
+section#img01 {
+  background-image: url('../imagens/background001.jpg');
+  background-size: cover;
+  background-attachment: fixed;
+}
+section#img02 {
+  background-image: url('../imagens/background002.jpg');
 }
 
 footer {
